# graphili

./: .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml  requirements.txt  run.py  serve.py
analyzer/: discovery.py  indexer.py  resolver.py
docs/changelog/: v1.00.txt  v1.01.txt  v1.02.txt  v1.03.txt  v1.04.txt  v1.05.txt
frontend/: app.js  index.html  styles.css
graphili/: main.py
graphili/analyzer/: models.py  resolver.py  visitors.py
graphili/frontend/: styles.css
output/: graph.json  graph_test.json  graph_tv1.json  graph_tv2.json  graph_tv3.json
tests/sample_project/routes/: students.py
tests/sample_project/services/: enrollment.py
tests/tv1/sample_project/models/: student.py
tests/tv2/: __init__.py
tests/tv2/ecommerce/: __init__.py
tests/tv2/ecommerce/models/: __init__.py  db.py  order.py  product.py
tests/tv2/ecommerce/routes/: __init__.py  cart.py  orders.py  products.py
tests/tv2/ecommerce/services/: __init__.py  inventory.py  notification.py  payment.py
tests/tv3/src_layout_project/: pyproject.toml
tests/tv3/src_layout_project/src/myapp/api/: __init__.py  endpoints.py
tests/tv3/src_layout_project/src/myapp/core/: __init__.py  database.py  logic.py
