[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphili"
version = "1.0.5"
description = "Static code graph analyzer and visualization for Python projects"
authors = [{name = "Muhammad Talha Kausar"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "watchdog>=3.0.0",
]

[project.scripts]
graphili = "graphili.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphili*"]
